@@ -9,9 +9,9 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 4475</build>
+	<build>Build 4490</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
-	<release_date>11.02.2008 - 00:47</release_date>
+	<release_date>11.02.2008 - 14:40</release_date>
 	<toenda_copyright>2003 - 2008</toenda_copyright>
 </version>
